@@ -1,6 +1,10 @@
 Version 1.3.15+svn:
  * language and i18n:
     * updated translations: Filipino, German
+ * multiplayer:
+    * don't display 'Remote scenario' for reloaded games in the multiplayer
+      lobby which is wrong in most cases (fixes bug #10882), the display
+      of 'Reloaded game' is disabled for now because of the string freeze
 
 Version 1.3.15:
  * language and i18n:
